# ats-prog

./: acerta_ferias.py  arq_importacao - antigo.txt  arq_importacao.txt  ats.ipynb  ats_prog.py  confere_ats.py  confere_progressao.py  gera_ats_progressao.py  gera_importacao.py  log.txt  matriculas para incluir na PROGRESSÃO.txt  matriculas para retirar da PROGRESSÃO.txt  matriculas para retirar o ATS.txt  pyproject.toml
ATS - 10-2023/: ats gerados - 10-2023 SQL.csv  ats gerados - 10-2023.csv
ATS - 11-2023/: ats gerados - 11-2023 SQL.csv  ats gerados - 11-2023.csv
ATS - 7-2023/: ats gerados - 2023 SQL.csv  ats gerados - 2023.csv
FERIAS - 10-2023/: FERIAS - 10-2023 bases SQL.csv  FERIAS - 10-2023.csv
FERIAS - 11-2023/: FERIAS - 11-2023 bases SQL.csv  FERIAS - 11-2023.csv
FERIAS - 7-2023/: FERIAS - 7-2023 bases SQL.csv  FERIAS - 7-2023.csv
PROGRESSAO - 10-2023/: progressoes geradas - 10-2023 SQL.csv  progressoes geradas - 10-2023.csv
mrh-web/: .gitignore  pyproject.toml
mrh-web/docs/source/: conf.py  index.rst
mrh-web/mrh/web/: __init__.py  config.py  exceptions.py  ferramentas.py  grabber.py  links.py  portal_usuarios.py  webdriver.py
mrh-web/mrh/web/cadastro/: funpresp.py  models.py  pessoas.py  servidores.py
mrh-web/mrh/web/esocial/: __init__.py
mrh-web/mrh/web/fopag/: __init__.py  ats_prog.py  contracheque.py  documentos.py
mrh-web/mrh/web/scripts/: fopag_ats.py  fopag_docs.py  fopag_ferias_ats_prog.py  fopag_progressao.py  fopag_sql.py
mrh-web/mrh/web/tests/: test_documentos_fopag.py  test_ferramentas.py  test_links.py  test_login.py
(+7 files in other folders)
